GNOME Bugzilla – Bug 763759
backend: Fix compile-time warning
Last modified: 2016-03-22 16:49:30 UTC
.
Created attachment 324112 [details] [review] backend: Fix compile-time warning The function returns a boolean, not a pointer.
Review of attachment 324112 [details] [review]: LGTM.
Attachment 324112 [details] pushed as 68bc6fd - backend: Fix compile-time warning