backend: Fix compile-time warning

The function returns a boolean, not a pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=763759